hr.po update thanks zeljko2

--- a/po/hr.po
+++ b/po/hr.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-06-24 23:29+0200\n"
-"PO-Revision-Date: 2020-05-11 12:22+0200\n"
+"PO-Revision-Date: 2020-06-25 08:18+0200\n"
 "Last-Translator: Željko <zeljko2@hi.ht.hr>\n"
 "Language-Team: Željko\n"
 "Language: hr_HR\n"
@@ -209,9 +209,9 @@ msgstr[2] "%d jezgri"
 #, python-format
 msgid "%d day"
 msgid_plural "%d days"
-msgstr[0] ""
-msgstr[1] ""
-msgstr[2] ""
+msgstr[0] "%d dan"
+msgstr[1] "%d dana"
+msgstr[2] "%d dana"
 
 #, python-format
 msgid "%d file"
@@ -250,7 +250,7 @@ msgstr "%d kB/s"
 msgid "%d min"
 msgstr "%d min"
 
-#, fuzzy, python-format
+#, python-format
 msgid "%d minute"
 msgid_plural "%d minutes"
 msgstr[0] "%d minuta"
@@ -2394,9 +2394,8 @@ msgstr "Kuba"
 msgid "Curacao"
 msgstr "Curacao"
 
-#, fuzzy
 msgid "Current"
-msgstr "< Trenutno >"
+msgstr "Trenutno"
 
 msgid "Current CEC address"
 msgstr "Trenutna CEC adresa"
@@ -2583,9 +2582,8 @@ msgstr "Zadane postavke"
 msgid "Default timer type"
 msgstr "Zadana vrsta tajmera"
 
-#, fuzzy
 msgid "Default+Picon"
-msgstr "< Zadano + pikon >"
+msgstr "Zadano+pikon"
 
 msgid "Define the location of the EPG Cache file."
 msgstr "Definirajte mjesto datoteke EPG predmemorije."
@@ -2659,7 +2657,6 @@ msgstr "Izbrisati"
 msgid "Delete Image"
 msgstr "Izbriši image"
 
-#, fuzzy
 msgid "Delete all the text"
 msgstr "Izbrišite sav tekst"
 
@@ -2975,9 +2972,8 @@ msgstr "Želite li izaći iz vodiča za skeniranje?"
 msgid "Do you want to reboot your receiver?"
 msgstr "Želite li ponovno pokrenuti prijemnik?"
 
-#, fuzzy
 msgid "Do you want to remove all the crash logfiles"
-msgstr "Želite li ukloniti sve datoteke dnevnika rušenja?"
+msgstr "Želite li ukloniti sve zapisnike pada sustava?"
 
 msgid "Do you want to remove the package:\n"
 msgstr "Želite li ukloniti paket:\n"
@@ -3162,9 +3158,8 @@ msgstr "Elektronski programski vodič (EPG)"
 msgid "Embedded"
 msgstr "Ugrađen"
 
-#, fuzzy
 msgid "Emergency"
-msgstr "< Hitna pomoć >"
+msgstr "Hitna pomoć"
 
 msgid "Empty slot"
 msgstr "Prazan utor"
@@ -5875,9 +5870,8 @@ msgstr "Zaustavljanje reprodukcije"
 msgid "Pause/Continue playback"
 msgstr "Pauza/nastavak reprodukcije"
 
-#, fuzzy
 msgid "Pending restart"
-msgstr "< U tijeku je ponovno pokretanje >"
+msgstr "U tijeku je ponovno pokretanje"
 
 msgid "Percentage left"
 msgstr "Postotak lijevo"
@@ -6359,9 +6353,9 @@ msgstr "Pritisnite MENU na daljinskom upravljaču za dodatne opcije."
 msgid "Press OK on your remote control to continue."
 msgstr "Pritisnite OK na daljinskom upravljaču za nastavak."
 
-#, fuzzy, python-format
+#, python-format
 msgid "Press OK to activate the selected %s skin."
-msgstr "Pritisnite OK za aktiviranje odabranog%s skina."
+msgstr "Pritisnite OK za aktiviranje odabranog %s skina."
 
 msgid "Press OK to activate the settings."
 msgstr "Pritisnite OK za aktiviranje postavki."
@@ -6373,9 +6367,9 @@ msgstr "Pritisnite OK za uređivanje postavki."
 msgid "Press OK to get further details for %s"
 msgstr "Pritisnite OK za dodatne pojedinosti za %s"
 
-#, fuzzy, python-format
+#, python-format
 msgid "Press OK to keep the currently selected %s skin."
-msgstr "Pritisnite OK za zadržavanje trenutno odabranog%s skina."
+msgstr "Pritisnite OK za zadržavanje trenutno odabranog %s skina."
 
 msgid "Press OK to scan"
 msgstr "Pritisnite OK za skeniranje"
@@ -8621,9 +8615,8 @@ msgstr "Odabir podnaslova..."
 msgid "Subtitle settings"
 msgstr "Postavke titla"
 
-#, fuzzy
 msgid "Subtitle show/hide..."
-msgstr "Odabir podnaslova..."
+msgstr "Prikaži/sakrij titlove..."
 
 msgid "Subtitles"
 msgstr "Titlovi"
@@ -8631,13 +8624,11 @@ msgstr "Titlovi"
 msgid "Subtitles Settings"
 msgstr "Postavke titlova"
 
-#, fuzzy
 msgid "Subtitles disabled"
-msgstr "Postavke titlova"
+msgstr "Titlovi onemogućeni"
 
-#, fuzzy
 msgid "Subtitles enabled"
-msgstr "Ograničenje omogućeno"
+msgstr "Titlovi omogućeni"
 
 msgid "Succeeded:"
 msgstr "Uspješno:"
@@ -8693,17 +8684,14 @@ msgstr "Promijenite kanal prema dolje"
 msgid "Switch channel up"
 msgstr "Promijenite kanal prema gore"
 
-#, fuzzy
 msgid "Switch on the display during Standby Mode"
-msgstr "Isključite zaslon tijekom stanja čekanja"
+msgstr "Uključite zaslon tijekom stanja čekanja"
 
-#, fuzzy
 msgid "Switch on the display during Suspend Mode"
-msgstr "Isključite zaslon tijekom obustave"
+msgstr "Uključite zaslon tijekom obustave"
 
-#, fuzzy
 msgid "Switch on the display during operation."
-msgstr "Isključite zaslon tijekom rada."
+msgstr "Uključite zaslon tijekom rada."
 
 msgid "Switch to TV mode"
 msgstr "Prebacite se na TV način"
@@ -9382,22 +9370,22 @@ msgid "Today"
 msgstr "Danas"
 
 msgid "Toggle HDMI In"
-msgstr "Promjenite HDMI ulaz"
+msgstr "Prebacite u HDMI ulaz"
 
 msgid "Toggle LCD LiveTV"
-msgstr "Promijenite LCD LiveTV"
+msgstr "Prebacite u LCD LiveTV"
 
 msgid "Toggle PiPzap"
-msgstr "Promjenite PIPzap"
+msgstr "Prebacite u PIPzap"
 
 msgid "Toggle TV/RADIO mode"
-msgstr "TV/RADIO način"
+msgstr "Prebacite u TV/RADIO način"
 
 msgid "Toggle a cut mark at the current position"
-msgstr "Dodajte/uklonite oznaku na trenutnoj poziciji"
+msgstr "Prebacite oznaku izrezivanja na trenutnu poziciju"
 
 msgid "Toggle dashed flickering line for this service"
-msgstr "Prikažite/sakrijte crtu koja treperi za ovu uslugu"
+msgstr "Prebacite pomičnu liniju za ovu uslugu"
 
 msgid "Toggle infoBar"
 msgstr "Prebacite info traku"
@@ -9406,11 +9394,10 @@ msgid "Toggle new text inserts before or overwrites existing text"
 msgstr "Prebacite nove tekstualne unose prije ili preko postojećeg teksta"
 
 msgid "Toggle show/hide"
-msgstr "Prebaci prikaži/sakrij"
+msgstr "Prebacite na Prikaži/sakrij"
 
-#, fuzzy
 msgid "Toggle subtitles show/hide"
-msgstr "Prebaci prikaži/sakrij"
+msgstr "Prebacivanje titlova u Prikaži/sakrij"
 
 msgid "Toggle the tv and the radio player..."
 msgstr "Prebacivanje između televizora i radio playera..."
@@ -9744,15 +9731,14 @@ msgstr "Ažuriranje kataloga softvera"
 msgid "Upper case"
 msgstr "Velika slova"
 
-#, fuzzy
 msgid "Uptime"
-msgstr "Tajmer spavanja"
+msgstr "Produljenje rada"
 
 msgid "Uruguay"
 msgstr "Urugvaj"
 
 msgid "Usage Setup"
-msgstr "Individualne postavke"
+msgstr "Postavke korištenja"
 
 msgid "Use"
 msgstr "Upotreba"
@@ -10440,17 +10426,14 @@ msgstr "S pogreškama:"
 msgid "With popup"
 msgstr "S porukom"
 
-#, fuzzy
 msgid "With this option you can switch on the display during operation."
-msgstr "S ovom opcijom možete isključiti zaslon tijekom rada."
+msgstr "S ovom opcijom možete uključiti zaslon tijekom rada."
 
-#, fuzzy
 msgid "With this option you can switch on the display in Deep Standby Mode."
-msgstr "S ovom opcijom možete isključiti zaslon u načinu dubokog stanja čekanja."
+msgstr "S ovom opcijom možete uključiti zaslon u načinu dubokog stanja čekanja."
 
-#, fuzzy
 msgid "With this option you can switch on the display in Standby Mode."
-msgstr "S ovom opcijom možete isključiti zaslon u stanje čekanja."
+msgstr "S ovom opcijom možete uključiti zaslon u stanje čekanja."
 
 msgid "With this option you can switch the LED color or deactivate the LED."
 msgstr "Pomoću ove opcije možete promjeniti LED boju ili deaktivirati LED."
